src/objects/eDM__c.object
<CustomObject>
    <description>Case: used for Ad-hoc eDM VF page display. Hidden for all users.</description>
    <fields>
        <fullName>Customer_Name__c</fullName>
        <label>Customer Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>eDM</relationshipLabel>
        <relationshipName>eDM</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email_Address_del__c</fullName>
        <label>Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Sent</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>eDM_Template__c</fullName>
        <label>eDM Template</label>
        <referenceTo>Template__c</referenceTo>
        <relationshipLabel>eDM</relationshipLabel>
        <relationshipName>eDM</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>eDM</label>
    <nameField>
        <displayFormat>eDM-{000000}</displayFormat>
        <label>eDM Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>eDM</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>